syntax = "proto3";
option csharp_namespace = "ChargerMessages";
import "Protocol/Messages.proto";
import "google/protobuf/empty.proto";


service ChargerGrain {
  rpc StartCharging (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc StopCharging (google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc ReceiveMsgFromCharger (MessageFromCharger) returns (google.protobuf.Empty);
  rpc NewWebSocketFromCharger (ChargerActorIdentity) returns (google.protobuf.Empty);
  rpc CommandReceived (CommandStatus) returns (google.protobuf.Empty);

}
service AuthGrain {
	rpc Authenticate (AuthenticationMessage) returns (AuthenticationResponse);
}