syntax = "proto3";
import "Protocol/protoactor/Protos.proto";
option csharp_namespace = "ChargerMessages";

message MessageFromCharger {
	string msg = 1;
	string from = 2;
}

message ChargerActorIdentity {
	actor.PID pid = 1;
	string serial_number = 2;
}

message AuthenticationMessage {
	string credentials =1;
}
message AuthenticationResponse{
	bool validated = 1;
}